--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,50 @@
 .App {
   text-align: center;
+  background-color: gray;
+}
+
+.nav-container {
+  list-style: none;
+  background: gray;
+  position: fixed;
+  width: 100vw;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  padding: 20px;
+}
+
+.nav-item {
+  border: 1px white solid;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 6px;
+}
+
+.nav-icon {
+  width: 50px;
+  height: 50px;
+  display: none;
+}
+
+.nav-hamburger {
+  height: 2px;
+  width: 35px;
+  border: 1px white solid;
+  background: white;
+  border-radius: 5px;
+  margin-bottom: 5px;
+}
+
+@media only screen and (max-width: 1024px) {
+  .nav-item {
+    display: none;
+  }
+  .nav-icon {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-left: 80vw;
+  }
 }
